--- a/styles/style.css
+++ b/styles/style.css
@@ -107,23 +107,76 @@ body {
 }
 
 /* Instgram */
-.instagram{
+.insta-section{
     text-align: center;
- 
+    padding: 0px 500px 54px 500px;
 }
+
 .insta-title{
 color: #272727;
-/* text-align: center; */
+text-align: center;
 font-size: 40px;
 font-weight: 800;
+/* display: flex; */
 }
 
 .insta-paragraph{
-    /* text-align: center;
-    display: flex; */
-    width: 594px;
+    text-align: center;
     color: rgba(39, 39, 39, 0.60);
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
+}
+
+.insta-pic{
+display: flex;
+width: 342px;
+height: 396px;
+gap: 24px;
+margin-top: 48px;
+ margin-left: 240px;
+ margin-right: 240px;
+}
+
+
+/* latest deal section */
+.latest-deal{
+    text-align: center;
+    background-image: url(../assets/Rectangle\ 9.png);
+    background-repeat: no-repeat;
+    margin-top: 50px;
+    padding: 122px;
+    margin-right: 150px;
+    margin-left: 150px;
+}
+
+.latest-title{
+color: #272727;
+/* text-align: center; */
+/* font-family: Lato; */
+font-size: 40px;
+/* font-style: normal; */
+font-weight: 800;
+/* line-height: normal; */
+/* padding-top: px 0px 0px 0px; */
+
+}
+
+.latest-paragraph{
+color: rgba(39, 39, 39, 0.60);
+/* text-align: center; */
+/* font-family: Lato; */
+font-size: 18px;
+/* font-style: normal; */
+font-weight: 400;
+line-height: 30px;
+}
+
+.latest-input{
+text-align: center;
+width: 700px;
+height: 64px;
+flex-shrink: 0;
+border-radius: 8px;
+background: #FFF;
 }
