--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,19 @@
 /* common share styles*/
-
 body {
     font-family: 'Lato', sans-serif;
 }
 
 /* Banner section style */
 .header{
-    width: 1920px;
-    height: 850px;
-    flex-shrink: 0;
     background: rgba(229, 84, 115, 0.10);
+    width: auto;
+    height: 850px;
     background-repeat: no-repeat;
     background-position: bottom right;
 }
 
 .banner{
-    padding: 50px 240px 0px 240px;
+    padding: 50px 100px 0px 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -30,11 +28,9 @@ body {
     font-size: 80px;
     font-weight: 800;
     width: 708px;
-
 }
 
 .banner-description{
-    /* display: flex; */
     width: 634px;
     flex-direction: column;
     flex-shrink: 0;
@@ -54,6 +50,7 @@ body {
 }
 
 .banner-pic {
+    margin-left: 90px;
     width: 635px;
     height: 800px;
 }
@@ -62,13 +59,13 @@ body {
 /* Hot deal container style */
 .hot-deal-container{
     display: flex;
+    margin-top: 128px;
     justify-content: space-around;
-    width: 1922px;
+    width: auto;
     height: 620px;
     border-radius: 8px;
     background: rgba(229, 84, 115, 0.05);
-    padding: 100px;
-    margin: 200px 0px;
+    padding-top: 100px;
 }
 
 .hot-deal-title{
@@ -76,7 +73,7 @@ body {
     font-size: 40px;
     font-weight: 800;
     text-align: center;
-    margin-bottom: 24px;
+    margin-top: 125px;
 }
 
 .hot-deal-span{
@@ -102,22 +99,19 @@ body {
 .hot-deal-pic{
     width: 318px;
     height: 420px;
-    /* padding: 100px 400px 100px 1100px; */
-
 }
 
 /* Instgram */
-.insta-section{
-    text-align: center;
-    padding: 0px 500px 54px 500px;
+.insta-cotainer{
+justify-content: space-around;
 }
 
 .insta-title{
+margin-top: 128px;
 color: #272727;
 text-align: center;
 font-size: 40px;
 font-weight: 800;
-/* display: flex; */
 }
 
 .insta-paragraph{
@@ -126,16 +120,17 @@ font-weight: 800;
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
+    margin-bottom: 50px;
 }
 
 .insta-pic{
 display: flex;
-width: 342px;
+width: auto;
 height: 396px;
 gap: 24px;
 margin-top: 48px;
- margin-left: 240px;
- margin-right: 240px;
+margin-left: 200px;
+margin-right: 200px;
 }
 
 
@@ -146,28 +141,19 @@ margin-top: 48px;
     background-repeat: no-repeat;
     margin-top: 50px;
     padding: 122px;
-    margin-right: 150px;
-    margin-left: 150px;
+    margin-right: 80px;
+    margin-left: 200px;
 }
 
 .latest-title{
 color: #272727;
-/* text-align: center; */
-/* font-family: Lato; */
 font-size: 40px;
-/* font-style: normal; */
 font-weight: 800;
-/* line-height: normal; */
-/* padding-top: px 0px 0px 0px; */
-
 }
 
 .latest-paragraph{
 color: rgba(39, 39, 39, 0.60);
-/* text-align: center; */
-/* font-family: Lato; */
 font-size: 18px;
-/* font-style: normal; */
 font-weight: 400;
 line-height: 30px;
 }
@@ -179,4 +165,56 @@ height: 64px;
 flex-shrink: 0;
 border-radius: 8px;
 background: #FFF;
+}
+
+/* Footer Section style */
+
+.footer-section{
+margin-top: 128px;
+text-align: center;
+width: 1922px;
+height: 449px;
+flex-shrink: 0;
+background: #111010;
+}
+
+.span-style{
+color: #E55473;
+font-family: Lato;
+font-size: 48px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.footer-title{
+padding-top: 128px;
+color: #FFFFFF;
+font-family: Lato;
+font-size: 48px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+
+.footer-paragraph{
+margin-top: 24px;
+display: flex;
+flex-direction: column;
+flex-shrink: 0;
+color: rgba(255, 255, 255, 0.90);
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+}
+
+p.copyright{
+color: rgba(255, 255, 255, 0.40);
+font-family: Lato;
+margin-top: 30px;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
 }
